prometheus/prometheus_service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
  namespace: prometheus
spec:
  ports:
  - name: http
    port: 9090
    protocol: TCP
    targetPort: web
  selector: 
    app.kubernetes.io/instance: master
    app.kubernetes.io/name: prometheus
  type: ClusterIP
