prometheus/prometheus_ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-server
  namespace: prometheus
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`prometheus-datapf-mgt.hd-plus-cloud.de`)
    services:
    - name: prometheus-server
      namespace: prometheus
      port: 9090
  tls:
    store:
      name: default
